# FaceRecognition_OpenCV

./: CMakeLists.txt  README.md  main.cpp
conf/: ModelPath.yaml
include/: FaceRecognition.h
src/: FaceRecognition.cpp  main.cpp
